@@ -12,241 +12,241 @@ import java.util.*;
 public class HandlingFiles {
     public static void main(String ...args) throws Exception {
 
-        // // Creating a File
-        // {
-        //     File zooFile1 = new File("./stripes.txt");
-        //     System.out.println(zooFile1.exists());
-        // }
+        // Creating a File
+        {
+            File zooFile1 = new File("./stripes.txt");
+            System.out.println(zooFile1.exists());
+        }
 
-        // // Creating a Path
-        // {
-        //     Path zooPath1 = Path.of("./stripes.txt");
-        //     Path zooPath2 = Paths.get("./stripes.txt");
-        //     System.out.println(Files.exists(zooPath1));
-        // }
+        // Creating a Path
+        {
+            Path zooPath1 = Path.of("./stripes.txt");
+            Path zooPath2 = Paths.get("./stripes.txt");
+            System.out.println(Files.exists(zooPath1));
+        }
 
-        // // Switching between File and Path
-        // {
-        //     File file = new File("rabbit");
-        //     Path nowPath = file.toPath();
-        //     File backToFile = nowPath.toFile();
-        // }
+        // Switching between File and Path
+        {
+            File file = new File("rabbit");
+            Path nowPath = file.toPath();
+            File backToFile = nowPath.toFile();
+        }
 
-        // // Obtaining a Path from the FileSystems Class
-        // {
-        //     Path zooPath1 = FileSystems.getDefault()
-        //         .getPath("./stripes.txt");
-        //     Path zooPath2 = FileSystems.getDefault()
-        //         .getPath("./", "stripes.txt");
-        //     System.out.println(Files.exists(zooPath2));
-        // }
+        // Obtaining a Path from the FileSystems Class
+        {
+            Path zooPath1 = FileSystems.getDefault()
+                .getPath("./stripes.txt");
+            Path zooPath2 = FileSystems.getDefault()
+                .getPath("./", "stripes.txt");
+            System.out.println(Files.exists(zooPath2));
+        }
 
-        // {
-        //     // io();
-        //     nio();
-        // }
+        {
+            // io();
+            nio();
+        }
 
 
         // Viewing a Path
-        // {
-        //     Path path = Paths.get("/land/hippo/harry.happy");
-        //     System.out.println("The Path Name is: " + path);
-        //     for(int i=0; i<path.getNameCount(); i++)
-        //         System.out.println("   Element " + i + " is: " + path.getName(i));
-        // }
+        {
+            Path path = Paths.get("/land/hippo/harry.happy");
+            System.out.println("The Path Name is: " + path);
+            for(int i=0; i<path.getNameCount(); i++)
+                System.out.println("   Element " + i + " is: " + path.getName(i));
+        }
 
 
         // Creating part of the path
-        // {
-        //     var p = Paths.get("/mammal/omnivore/raccoon.image");
-        //     System.out.println("Path is: " + p);
-        //     for (int i = 0; i < p.getNameCount(); i++) {
-        //         System.out.println("   Element " + i + " is: " + p.getName(i));
-        //     }
-        //     System.out.println();
-        //     System.out.println("subpath(0,3): " + p.subpath(0, 3));
-        //     System.out.println("subpath(1,2): " + p.subpath(1, 2));
-        //     System.out.println("subpath(1,3): " + p.subpath(1, 3));
+        {
+            var p = Paths.get("/mammal/omnivore/raccoon.image");
+            System.out.println("Path is: " + p);
+            for (int i = 0; i < p.getNameCount(); i++) {
+                System.out.println("   Element " + i + " is: " + p.getName(i));
+            }
+            System.out.println();
+            System.out.println("subpath(0,3): " + p.subpath(0, 3));
+            System.out.println("subpath(1,2): " + p.subpath(1, 2));
+            System.out.println("subpath(1,3): " + p.subpath(1, 3));
 
-        //     // var q = p.subpath(0, 4); // IllegalArgumentException
-        //     // var x = p.subpath(1, 1); // IllegalArgumentException
-        // }
+            // var q = p.subpath(0, 4); // IllegalArgumentException
+            // var x = p.subpath(1, 1); // IllegalArgumentException
+        }
 
 
         // Accessing Path Elements
-        // {
-        //     printPathInformation(Path.of("zoo"));
-        //     printPathInformation(Path.of("/zoo/armadillo/shells.txt"));
-        //     printPathInformation(Path.of("./armadillo/../shells.txt"));
-        // }
+        {
+            printPathInformation(Path.of("zoo"));
+            printPathInformation(Path.of("/zoo/armadillo/shells.txt"));
+            printPathInformation(Path.of("./armadillo/../shells.txt"));
+        }
 
 
         // Resolving paths
-        // {
-        //     Path path1 = Path.of("/cats/../panther");
-        //     Path path2 = Path.of("food");
-        //     System.out.println(path1.resolve(path2));
+        {
+            Path path1 = Path.of("/cats/../panther");
+            Path path2 = Path.of("food");
+            System.out.println(path1.resolve(path2));
 
-        //     Path path3 = Path.of("/turkey/food");
-        //     System.out.println(path3.resolve("/tiger/cage"));
-        // }
+            Path path3 = Path.of("/turkey/food");
+            System.out.println(path3.resolve("/tiger/cage"));
+        }
 
         
         // Relativizing a path
-        // {
-        //     var path1 = Path.of("fish.txt");
-        //     var path2 = Path.of("friendly/birds.txt");
-        //     System.out.println(path1.relativize(path2));
-        //     System.out.println(path2.relativize(path1));
+        {
+            var path1 = Path.of("fish.txt");
+            var path2 = Path.of("friendly/birds.txt");
+            System.out.println(path1.relativize(path2));
+            System.out.println(path2.relativize(path1));
 
-        //     Path path3 = Paths.get("/habitat");
-        //     Path path4 = Paths.get("/sanctuary/raven/poe.txt");
-        //     System.out.println(path3.relativize(path4));
-        //     System.out.println(path4.relativize(path3));
+            Path path3 = Paths.get("/habitat");
+            Path path4 = Paths.get("/sanctuary/raven/poe.txt");
+            System.out.println(path3.relativize(path4));
+            System.out.println(path4.relativize(path3));
 
-        //     // Path path1 = Paths.get("/primate/chimpanzee");
-        //     // Path path2 = Paths.get("bananas.txt");
-        //     // path1.relativize(path2); // IllegalArgumentException
-        // }
+            // Path path1 = Paths.get("/primate/chimpanzee");
+            // Path path2 = Paths.get("bananas.txt");
+            // path1.relativize(path2); // IllegalArgumentException
+        }
 
 
         // Normalizing path
-        // {
-        //     var p1 = Path.of("./armadillo/../shells.txt");
-        //     p1 = Path.of("./armadillo/../shells.txt");
-        //     System.out.println(p1.normalize()); // shells.txt
+        {
+            var p1 = Path.of("./armadillo/../shells.txt");
+            p1 = Path.of("./armadillo/../shells.txt");
+            System.out.println(p1.normalize()); // shells.txt
             
-        //     var p2 = Path.of("/cats/../panther/food");
-        //     System.out.println(p2.normalize()); // /panther/food
+            var p2 = Path.of("/cats/../panther/food");
+            System.out.println(p2.normalize()); // /panther/food
             
-        //     var p3 = Path.of("../../fish.txt");
-        //     System.out.println(p3.normalize()); // ../../fish.txt
-        // }
-        // {
-        //     var p1 = Paths.get("/pony/../weather.txt");
-        //     var p2 = Paths.get("/weather.txt");
-        //     System.out.println(p1.equals(p2)); // false
-        //     System.out.println(p1.normalize().equals(p2.normalize())); // true
-        // }
+            var p3 = Path.of("../../fish.txt");
+            System.out.println(p3.normalize()); // ../../fish.txt
+        }
+        {
+            var p1 = Paths.get("/pony/../weather.txt");
+            var p2 = Paths.get("/weather.txt");
+            System.out.println(p1.equals(p2)); // false
+            System.out.println(p1.normalize().equals(p2.normalize())); // true
+        }
 
 
         // Real file system path
-        // {
-        //    System.out.println(Paths.get(".").toRealPath());
-        // }
+        {
+           System.out.println(Paths.get(".").toRealPath());
+        }
 
 
         // Create directory
-        // {
-        //     Files.createDirectory(Path.of("./bison/field")); // Exception when the predirectory is nort created
-        //     // Files.createDirectories(Path.of("./bison/field/pasture/green"));
-        // }
+        {
+            Files.createDirectory(Path.of("./bison/field")); // Exception when the predirectory is nort created
+            // Files.createDirectories(Path.of("./bison/field/pasture/green"));
+        }
 
         // Reading files
-        // {
-        //     Files.readAllLines(Paths.get("./stripes.txt")).forEach(System.out::println);
-        //     Files.lines(Paths.get("./stripes.txt")).forEach(System.out::println);
-        // }
+        {
+            Files.readAllLines(Paths.get("./stripes.txt")).forEach(System.out::println);
+            Files.lines(Paths.get("./stripes.txt")).forEach(System.out::println);
+        }
 
 
         // Copy data
-        // {
-        //     copyPath(Paths.get("./stripes.txt"), Paths.get("./copy.txt"));
-        // }
+        {
+            copyPath(Paths.get("./stripes.txt"), Paths.get("./copy.txt"));
+        }
 
 
-        // {
-        //     try (var in = new FileInputStream("zoo.txt")) {
-        //         System.out.println("Found file!");
-        //     } catch (FileNotFoundException e) {
-        //         System.err.println("File not found!");
-        //     }
-        // }
-        // {
-        //     var reader = new BufferedReader(new InputStreamReader(System.in));
-        //     String userInput = reader.readLine();
-        //     System.out.println("You entered: " + userInput);
-        // }
-        // {
-        //     try (var out = System.out) {}
-        //     System.out.println("Hello"); // Prints nothing
-        // }
-        // {
-        //     try (var err = System.err) {}
-        //     System.err.println("Hello"); // Prints nothing
-        // }
-        // {
-        //     var reader = new BufferedReader(new InputStreamReader(System.in));
-        //     try (reader) {}
-        //     String data = reader.readLine(); // IOException
-        // }
+        {
+            try (var in = new FileInputStream("zoo.txt")) {
+                System.out.println("Found file!");
+            } catch (FileNotFoundException e) {
+                System.err.println("File not found!");
+            }
+        }
+        {
+            var reader = new BufferedReader(new InputStreamReader(System.in));
+            String userInput = reader.readLine();
+            System.out.println("You entered: " + userInput);
+        }
+        {
+            try (var out = System.out) {}
+            System.out.println("Hello"); // Prints nothing
+        }
+        {
+            try (var err = System.err) {}
+            System.err.println("Hello"); // Prints nothing
+        }
+        {
+            var reader = new BufferedReader(new InputStreamReader(System.in));
+            try (reader) {}
+            String data = reader.readLine(); // IOException
+        }
 
 
-        // {
-        //     Console console = System.console();
-        //     if (console == null) {
-        //         throw new RuntimeException("Console not available");
-        //     } else {
-        //         console.writer().println("Welcome to Our Zoo!");
-        //         console.format("It has %d animals and employs %d people", 391, 25);
-        //         console.writer().println();
-        //         console.printf("The zoo spans %5.1f acres", 128.91);
-        //     }
-        // }
-        // {
-        //     Console console = System.console();
-        //     if (console == null) {
-        //         throw new RuntimeException("Console not available");
-        //     } else {
-        //         String name = console.readLine("Please enter your name: ");
-        //         console.writer().format("Hi %s", name);
-        //         console.writer().println();
+        {
+            Console console = System.console();
+            if (console == null) {
+                throw new RuntimeException("Console not available");
+            } else {
+                console.writer().println("Welcome to Our Zoo!");
+                console.format("It has %d animals and employs %d people", 391, 25);
+                console.writer().println();
+                console.printf("The zoo spans %5.1f acres", 128.91);
+            }
+        }
+        {
+            Console console = System.console();
+            if (console == null) {
+                throw new RuntimeException("Console not available");
+            } else {
+                String name = console.readLine("Please enter your name: ");
+                console.writer().format("Hi %s", name);
+                console.writer().println();
                 
-        //         console.format("What is your address? ");
-        //         String address = console.readLine();
+                console.format("What is your address? ");
+                String address = console.readLine();
                 
-        //         char[] password = console.readPassword("Enter a password "
-        //             + "between %d and %d characters: ", 5, 10);
-        //         char[] verify = console.readPassword("Enter the password again: ");
-        //         console.printf("Passwords "
-        //             + (Arrays.equals(password, verify) ? "match" : "do not match"));
-        //     }
-        // }
+                char[] password = console.readPassword("Enter a password "
+                    + "between %d and %d characters: ", 5, 10);
+                char[] verify = console.readPassword("Enter the password again: ");
+                console.printf("Passwords "
+                    + (Arrays.equals(password, verify) ? "match" : "do not match"));
+            }
+        }
 
 
         // Retrieving attributes
-        // {
-        //     var path = Paths.get("./stripes.txt");
-        //     BasicFileAttributes data = Files.readAttributes(path,
-        //         BasicFileAttributes.class);
+        {
+            var path = Paths.get("./stripes.txt");
+            BasicFileAttributes data = Files.readAttributes(path,
+                BasicFileAttributes.class);
             
-        //     System.out.println("Is a directory? " + data.isDirectory());
-        //     System.out.println("Is a regular file? " + data.isRegularFile());
-        //     System.out.println("Is a symbolic link? " + data.isSymbolicLink());
-        //     System.out.println("Size (in bytes): " + data.size());
-        //     System.out.println("Last modified: " + data.lastModifiedTime());
-        // }
+            System.out.println("Is a directory? " + data.isDirectory());
+            System.out.println("Is a regular file? " + data.isRegularFile());
+            System.out.println("Is a symbolic link? " + data.isSymbolicLink());
+            System.out.println("Size (in bytes): " + data.size());
+            System.out.println("Last modified: " + data.lastModifiedTime());
+        }
 
         // Modifying Attributes
-        // {
-        //     // Read file attributes
-        //     var path = Paths.get("./stripes.txt");
-        //     BasicFileAttributeView view = Files.getFileAttributeView(path,
-        //         BasicFileAttributeView.class);
-        //     BasicFileAttributes attributes = view.readAttributes();
+        {
+            // Read file attributes
+            var path = Paths.get("./stripes.txt");
+            BasicFileAttributeView view = Files.getFileAttributeView(path,
+                BasicFileAttributeView.class);
+            BasicFileAttributes attributes = view.readAttributes();
             
-        //     // Modify file last modified time
-        //     FileTime lastModifiedTime = FileTime.fromMillis(
-        //         attributes.lastModifiedTime().toMillis() + 10_000);
-        //     view.setTimes(lastModifiedTime, null, null);
-        // }
+            // Modify file last modified time
+            FileTime lastModifiedTime = FileTime.fromMillis(
+                attributes.lastModifiedTime().toMillis() + 10_000);
+            view.setTimes(lastModifiedTime, null, null);
+        }
 
 
         // Walking a Directory
-        // {
-        //     var size = getPathSize(Path.of("/Users/christiandionisio/Desktop/javaOCP"));
-        //     System.out.format("Total Size: %.2f megabytes", (size/1000000.0));
-        // }
+        {
+            var size = getPathSize(Path.of("/Users/christiandionisio/Desktop/javaOCP"));
+            System.out.format("Total Size: %.2f megabytes", (size/1000000.0));
+        }
 
 
 
